[package]
name = "tcss460_csv_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
csv = "1.3.0"
percent-encoding = "2.3.1"
url = "2.5.2"
dotenv = "0.15.0"
